# hotstuff-docker

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  diagnose.sh  docker-compose.test.yml  docker-compose.yml  down.sh  flame.sh  hosts.txt  ingress.json  plot.py  run_test.sh  start.sh  stop.sh  tem_debug.sh  test_nw.sh
ec2/: .adv-node  Makefile  check_region.sh  cmd.txt  copy_security_group.sh  deploy-ec2.sh  docker-compose-adv.yml  docker-compose-client.yml  docker-compose-node.yml  generate-node-envs-attack-mode.sh  generate-node-envs.sh  get_ips.sh  hosts.txt  init-ec2.sh  plan-10.json  plan-100.json  plan-120.json  plan-20.json  plan-200.json  plan-30.json  plan-32.json  plan-4.json  plan-40.json  plan-50.json  plan-60.json  plan-64.json  plan-70.json  plan-80.json  plan-90.json  regions.txt  rtt.py  set_verify_cgroups.sh  start_instances.sh  stop_instances.sh  upload_pubkey.sh
ec2/attack pairs/earlier/pompe-attack-attemp2/: note.txt
ec2/axiv/10nodes/ec2-logs-smrol/: docker-compose-node.yml
ec2/axiv/34nodes/ec2-logs-smrol/: docker-compose-node.yml
ec2/axiv/4nodes/ec2-logs-8vcpu-4000tps/: docker-compose-node.yml
ec2/axiv/4nodes/ec2-logs-smrol-batch-sig/: metrics.txt  note.txt
ec2/envs/: client.env  node0.env  node1.env  node10.env  node100.env  node101.env  node102.env  node103.env  node104.env  node105.env  node106.env  node107.env  node108.env  node109.env  node11.env  node110.env  node111.env  node112.env  node113.env  node114.env  node115.env  node116.env  node117.env  node118.env  node119.env  node12.env  node120.env  node121.env  node122.env  node123.env  node124.env  node125.env  node126.env  node127.env  node128.env  node129.env  node13.env  node130.env  node131.env  node132.env  (+160 more)
ec2/plans/: plan-16.json  plan-160.json  plan-180.json  plan-31.json  plan-50.json  plan-80.json
hotstuff_runner/: Cargo.toml
hotstuff_runner/src/: affinity.rs  app.rs  detailed_performance_metrics.rs  diagnose.rs  event.rs  flood_limiter.rs  kv_store.rs  lib.rs  lockfree_types.rs  main.rs  network.rs  node.rs  pompe.rs  pompe_adversary.rs  pompe_network.rs  stats.rs  tcp_network.rs  tcp_node.rs  telemetry.rs  tokio_network.rs  tx_utils.rs  utils.rs
hotstuff_runner/src/smrol/: adapter.rs  consensus.rs  crypto.rs  finalization.rs  manager.rs  manager_adversary.rs  message.rs  mod.rs  network.rs  pnfifo.rs  sequencing-1.rs  sequencing.rs  smrol_network.rs
