[package]
name = "hotstuff_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hotstuff_rs = { path = "../hotstuff_rs" }
log = "0.4"
fern = "0.6"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
# rand = "0.9.2"
rand = "0.7"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10"
# borsh = "1.0"
borsh = "0.10"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
tracing = "0.1"
tracing-subscriber =  { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
once_cell = "1.19"
futures = "0.3.31"
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

# [[bin]]
# name = "hotstuff_runner"
# path = "src/main.rs"

[[bin]]
name = "docker_node"
path = "src/bin/docker_node.rs"

[[bin]]
name = "docker_node_adversary"
path = "src/bin/docker_node_adversary.rs"

# [[bin]]
# name = "single_node_test"
# path = "src/bin/single_node_test.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dev-dependencies]
tempfile = "3"
