[package]
name = "hotstuff_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hotstuff_rs = { path = "../hotstuff_rs" }
log = "0.4"
fern = "0.6"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
rand = "0.7"
rand08 = { package = "rand", version = "0.8" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand_chacha = "0.2"
sha2 = "0.10"
borsh = "0.10"
ed25519-dalek = { version = "2.0.0", features = ["rand_core","pkcs8"] }
tracing = "0.1"
tracing-subscriber =  { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
once_cell = "1.19"
futures = "0.3.31"
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
rug = "1.15" 
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
console-subscriber = { version = "0.2", features = ["parking_lot"] }
tracing-flame = "0.2"
inferno = "0.11"
core_affinity = "0.6"
# observability
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
metrics-util = { version = "0.16", default-features = false, features = ["recency", "registry", "summary"] }
# smrol
# ds: ed25519_dalek
# threshold signature
blsttc = "8"
blst = "0.3.16"
# erasure coding
reed-solomon-erasure = "6.0"
# vc
# accumulator = { git = "https://github.com/cambrian/accumulator.git", tag = "v0.2.1" }
rs_merkle = "1.4"
socket2 = "0.6.1"
# vaba
# vaba-rust = { git = "https://github.com/lichuang/vaba-rust", branch = "main" }


[[bin]]
name = "docker_node"
path = "src/bin/docker_node.rs"
[[bin]]
name = "docker_node_adversary"
path = "src/bin/docker_node_adversary.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dev-dependencies]
tempfile = "3"
